test/Common/LinkerScriptParsing/Errors/Sections/IncludeErrorInMainScript/Inputs/11.c
int meldfn(void) { return 0; }
